# Quoridor

./: .gitignore  CLAUDE.md  implementation_plan.md
docs/: DECISION_LOG.md  OPTIMIZATION_HISTORY.md  PROBLEMS_FOR_REVIEW.md  RESEARCH_QUORIDOR_AI.md  TRAINING_GUIDE.md  TRAINING_LOG.md  VISION.md  WHY_TRAINING_IS_SLOW.md
engine/: ai_player.py  arena.py  dashboard.py  game.py  heuristic_bot.py  journal.py  main.py  mcts.py  model.py  parallel_mcts.py  pretrain.py  replay.py  requirements.txt  self_play.py  train.py  watch.py
engine/aws/: check_training.sh  download_model.sh  launch_training.sh  stop_training.sh
engine/checkpoints/: models.json
engine/cpp/: CMakeLists.txt  bindings.cpp  build.bat  build.sh  mcts.hpp  quoridor.hpp  setup.py  test_cpp.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  ReplayViewer.jsx  WatchGame.jsx  index.css  sounds.js
reference/: screenshot_final.mjs
